CREATE TABLE "vacancies" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "title" varchar(255) NOT NULL,
  "description" text,
  "status" vacancy_status DEFAULT 'opened',
  "created_by" int NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);