CREATE TABLE "sla_rules" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "vacancy_id" int NOT NULL,
  "stage_id" int NOT NULL,
  "duration_hours" int NOT NULL,
  "created_by" int NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE UNIQUE INDEX ON "sla_rules" ("stage_id", "vacancy_id");